# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: code_climate_check.yml  lint-flake8.yml
gendiff/: __init__.py  stylish.py  treenode.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  nested_short1.json  nested_short2.json  testdictdiff.py
gendiff/tests/: gendiff_test.py
tests/: difftree_test.py  gendiff_test.py  result_flat.txt
