[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["onthemod <onthemod@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
flake8 = "^5.0.4"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
